2012-10-18  Kai Tietz  <ktietz@redhat.com>

	PR binutils/14067
	* NEWS: Menition new feature.
	* scripttempl/pep.sc: Add zdebug sections.
	* scripttempl/pe.sc: L

2012-09-19  Steve Ellcey  <sellcey@mips.com>

	* configure.tgt: Add mips*-mti-elf* target.

2012-09-17  Alan Modra  <amodra@gmail.com>

	* ld.texinfo (Expression Section): Correct description of
	conversions for a binary operation involving an absolute symbol
	and a number.

2012-09-14  David Edelsohn  <dje.gcc@gmail.com>

	* configure: Regenerate.

2012-09-13  Anthony Green  <green@moxielogic.com>

	* emulparams/elf32moxie.sh (BIG_OUTPUT_FORMAT,
	LITTLE_OUTPUT_FORMAT): Define.
	(OUTPUT_FORMAT): Change to elf32-bigmoxie.
	(EMBEDDED): Define.

2012-09-12  DJ Delorie  <dj@redhat.com>

	* emulparams/elf32rx.sh (OTHER_READONLY_SECTIONS): Add W_* sections.

2012-09-10  Matthias Klose  <doko@ubuntu.com>

	* config.in: Disable sanity check for kfreebsd.

2012-09-10  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated.

2012-09-10  Iain Sandoe  <iain@codesourcery.com>
	    Alan Modra  <amodra@gmail.com>

	* configure.tgt (powerpc-*-elf, et al): Define targ_extra_libpath.
	Correct whitespace.
	(powerpcle-*-elf, et al): Likewise.  Correct targ_extra_emuls.

2012-09-10  Iain Sandoe  <iain@codesourcery.com>

	* configure.tgt (powerpc-*-elf, et al): Define targ64_extra_emuls
	and targ64_extra_libpath.
	(powerpcle-*-elf, et al): Likewise.

2012-09-09  Hans-Peter Nilsson  <hp@bitrange.com>

	* emultempl/mmo.em (mmo_place_orphan): Rewrite to also attach
	orphan sections to .data and .bss output sections, not just .text.
	When giving up on finding a suitable output section, attach to any
	output section other than .MMIX.reg_contents, if it exists.
	* scripttempl/mmo.sc: Move output debug sections to just before
	.MMIX.reg_contents.  Add .gnu.attributes.  Add new . = . NOP
	assignments and move end-of-section provide-symbols after them
	to force the end-of-section symbols to the address after orphan